src/test/deca/codegen/valid/PrintingWithThis.deca
// Description:
//    printing with this
//
// Resultats:
//    3
// 
// Historique:
//    cree le 01/01/2023
class A {
	int a = 5;
	void setA(int b){
		this.a = b;
		println(this.a);
	}
}

{
	A a = new A();
	a.setA(3);
}
